apps/homelab/capacitor/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capacitor
  namespace: flux-system
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: capacitor.twaslowski.com
      http:
        paths:
          - backend:
              service:
                name: capacitor
                port:
                  number: 9000
            path: /
            pathType: Prefix
